# video-search

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
backend/: config.py  main.py  models.py
backend/routers/: chat.py  explain.py  ingest.py  library.py  search.py  settings.py  videos.py
backend/services/: embeddings.py  library.py  llm.py  transcription.py  vectorstore.py  video_processing.py  visual.py  watcher.py
frontend/: app.js  index.html  style.css
